fixed display issues on smaller screens

--- a/style.css
+++ b/style.css
@@ -296,3 +296,13 @@ svg{
         grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
     }
 }
+
+@media (max-width: 480px){
+    * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        font-size: 3vw;
+    }
+   
+}
